# study-mba-em-engenharia-de-software-com-ia-introducao-langchain

./: .env.example  .gitignore  Instructions.md  MIGRATION.md  README.md  pyproject.toml
src/_agentes-e-tools/_gemini/: agente-react-e-tools.py  agente-react-usando-prompt-hub.py
src/_agentes-e-tools/_openai/: agente-react-e-tools.py  agente-react-usando-prompt-hub.py
src/_agentes_e_tools/_openai/: agente-react-e-tools.py  agente-react-usando-prompt-hub.py
src/_chains-e-processamento/: runnable-lambda.py
src/_chains-e-processamento/_gemini/: chains-decorator.py  iniciando-com-chains.py  pipeline-de-processamento.py  pipeline-de-sumarizacao.py  sumarizacao-com-map-reduce.py  sumarizacao.py
src/_chains-e-processamento/_openai/: chains-decorator.py  iniciando-com-chains.py  pipeline-de-processamento.py  pipeline-de-sumarizacao.py  sumarizacao-com-map-reduce.py  sumarizacao.py
src/_data-loading-rag/: carregamento-de-pdf.py  carregamento-usando-WebBaseLoader.py
src/_data-loading-rag/_gemini/: ingestion-pgvector.py  search-vector.py
src/_data-loading-rag/_openai/: ingestion-pgvector.py  search-vector.py
src/_fundamentos/: prompt-template.py
src/_fundamentos/_gemini/: chat-prompt-template.py  hello-world.py
src/_fundamentos/_openai/: chat-prompt-template.py  hello-world.py
src/_gerenciamento-memoria/_gemini/: armazenamento-de-historico.py  historico-baseado-em-sliding-window.py
src/_gerenciamento-memoria/_openai/: armazenamento-de-historico.py  historico-baseado-em-sliding-window.py
src/langchain_project/: __init__.py  main.py
