[tool.poetry]
name = "langchain-project"
version = "0.1.0"
description = "LangChain project with OpenAI and Google GenAI integration"
authors = ["Alcir Junior"]
readme = "README.md"
packages = [{include = "langchain_project", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-google-genai = "^2.0.0"
langchain-community = "^0.3.0"
langchain-text-splitters = "^0.3.0"
python-dotenv = "^1.0.0"
beautifulsoup4 = "^4.12.0"
pypdf = "^5.0.0"
langchain-postgres = "^0.0.16"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
ruff = "^0.7.0"
mypy = "^1.8.0"

[tool.poetry.scripts]
langchain = "langchain_project.main:main"
langchain-project = "langchain_project.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
